# moss-stack

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
backend/: package.json  pyproject.toml
backend/app/: config.py  container.py  di.py  main.py  router.py
backend/app/features/auth/: api.py  schemas.py
backend/app/features/auth/commands/: login_user.py  register_user.py
backend/app/features/auth/domain/: user.py
backend/app/features/auth/infra/: security.py  user_repository.py
backend/app/features/iam/: schemas.py
backend/app/features/iam/api/: admin_router.py  auth_router.py  user_router.py
backend/app/features/iam/application/: event_handlers.py
backend/app/features/iam/domain/: events.py  identity.py  user.py
backend/app/features/iam/infra/: identity_repository.py  security.py  user_repository.py
backend/app/features/item/: api.py  schemas.py  tasks.py
backend/app/shared/: schemas.py
backend/app/shared/application/: exceptions.py  interfaces.py  result.py
backend/app/shared/domain/: aggregate_root.py  entity.py  event.py  exceptions.py  identifier.py  value_object.py
backend/app/shared/infrastructure/: uow.py
backend/app/shared/web/: deps.py  middleware.py
backend/app/workers/: main.py
backend/migrations/: env.py
backend/migrations/versions/: 0a2452bb15ce_initial_migration.py  584908defd59_initial_migration.py  7258ecd8d802_change_itemeventstore_occurred_on_to_.py  9bbb60be4b80_initial_migration.py  a1c52d826dd0_initial_migration.py  ac528cc92fd6_initial_migration.py  ede7d5420239_initial_migration.py
(+43 files in other folders)
